--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </header>
 
-<p>立体几何公式。设拟柱体的高（两底面α，β间的距离）为H，如果用平行于底面的平面γ去截该图形，所得到的截面面积是平面γ与平面α之间距离h的不超过3次的函数，那么该拟柱体的体积为<img src="formula/simpson.svg" style="vertical-align:-1.755ex;width:7.755ex;height:5.134ex;"/>。<a href="https://baike.baidu.com/item/%E8%BE%9B%E6%99%AE%E6%A3%AE%E5%85%AC%E5%BC%8F/9255085?fr=aladdin" class="readmore">查看更多</a></p>
+<p>立体几何公式。设拟柱体的高（两底面α，β间的距离）为H，如果用平行于底面的平面γ去截该图形，所得到的截面面积是平面γ与平面α之间距离h的不超过3次的函数，那么该拟柱体的体积为<img src="saying/simpson.svg" style="vertical-align:-1.755ex;width:7.755ex;height:5.134ex;"/>。<a href="https://baike.baidu.com/item/%E8%BE%9B%E6%99%AE%E6%A3%AE%E5%85%AC%E5%BC%8F/9255085?fr=aladdin" class="readmore">查看更多</a></p>
 
 
 </article>
