--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 </header>
 
-<p>立体几何公式。设拟柱体的高（两底面α，β间的距离）为H，如果用平行于底面的平面γ去截该图形，所得到的截面面积是平面γ与平面α之间距离h的不超过3次的函数，那么该拟柱体的体积为<img src="https://www.zhihu.com/equation?tex=V%3d%5cfrac%7B1%7D%7B6%7D%5Ccdot%28S_1%2B4S_0%2BS_2%29%5Ccdot%5c+h" style="vertical-align:-1.755ex;width:7.755ex;height:5.134ex;"/>。<a href="https://baike.baidu.com/item/%E8%BE%9B%E6%99%AE%E6%A3%AE%E5%85%AC%E5%BC%8F/9255085?fr=aladdin" class="readmore">查看更多</a></p>
+<p>立体几何公式。设拟柱体的高（两底面α，β间的距离）为H，如果用平行于底面的平面γ去截该图形，所得到的截面面积是平面γ与平面α之间距离h的不超过3次的函数，那么该拟柱体的体积为<img src="https://www.zhihu.com/equation?tex=V%3d%5cfrac%7B1%7D%7B6%7D%5Ccdot%28S_1%2B4S_0%2BS_2%29%5Ccdot%5c+h" style="vertical-align:middle;"/>。<a href="https://baike.baidu.com/item/%E8%BE%9B%E6%99%AE%E6%A3%AE%E5%85%AC%E5%BC%8F/9255085?fr=aladdin" class="readmore">查看更多</a></p>
 
 
 </article>
@@ -153,7 +153,7 @@
 <div class="sb-c">
 <ul>
 <li><a href="#">语文</a></li>
-<li><a href="#">数学</a></li>
+<li><a href="branchsub/math.html">数学</a></li>
 <li><a href="#">英语</a></li>
 <li><a href="#">物理学</a></li>
 <li><a href="#">化学</a></li>
@@ -197,9 +197,8 @@
 <div class="clear"></div>
 </div>
 <footer>
-<p>&copy; Copyright &copy; 2013.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+<p>107Studio学术交流角。107 Studio</p>
 
 </footer>
-<div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
 </body>
 </html>
