--- a/branchsub/math.html
+++ b/branchsub/math.html
@@ -47,12 +47,12 @@
 		<div class="collapse navbar-collapse" id="mainNavbar">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-						<a class="nav-link" href="a107studio.github.io/homepage.html"> 回主站 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="https://a107studio.github.io/homepage.html"> 回主站 <span class="sr-only">(current)</span></a>
 				</li>
 
 
 				<li class="nav-item">
-					<a class="nav-link" href="a107studio.github.io/academic-corner/index.html">回到交流角</a>
+					<a class="nav-link" href="https://a107studio.github.io/academic-corner/index.html">回到交流角</a>
 			</li>
 
 				<li class="nav-item dropdown active">
@@ -101,7 +101,7 @@
 
 				<p class="article-meta">Posted by 107Math</a></p>
 
-				<p>18世纪，蒲丰提出以下问题：设我们有一个以平行且等距木纹铺成的地板，随意抛一支长度比木纹之间距离小的针，求针和其中一条木纹相交的概率。蒲丰本人证明了概率为：<img src="https://bkimg.cdn.bcebos.com/formula/3a0c6c5228d39686af63569aa4728d13.svg">。</p>
+				<p>18世纪，蒲丰提出以下问题：设我们有一个以平行且等距木纹铺成的地板，随意抛一支长度比木纹之间距离小的针，求针和其中一条木纹相交的概率。蒲丰本人证明了概率为：<img src="https://www.zhihu.com/equation?tex=p=%5cfrac%7B2l%7D%7B%CF%80a%7D">。</p>
 
 				
 				<a href="https://baike.baidu.com/item/%E8%92%B2%E4%B8%B0%E6%8A%95%E9%92%88%E9%97%AE%E9%A2%98/10876943?fr=aladdin" class="btn btn-primary">Read more</a>
@@ -148,7 +148,7 @@
 
 				<p>旋转矩阵是在乘以一个向量的时候有改变向量的方向但不改变大小的效果的矩阵。旋转矩阵不包括反演，它可以把右手坐标系改变成左手坐标系或反之。所有旋转加上反演形成了正交矩阵的集合。旋转可分为主动旋转与被动旋转。主动旋转是指将向量逆时针围绕旋转轴所做出的旋转。被动旋转是对坐标轴本身进行的逆时针旋转，它相当于主动旋转的逆操作。</p>
 				<p>在二维空间中，旋转可以用一个单一的角θ定义。作为约定，正角表示逆时针旋转。把笛卡尔坐标的列向量关于原点逆时针旋转 θ 的矩阵是:</p>
-				<p><img src="a107studio.github.io/academic-corner/formula/rotate.svg"></p>
+				<p><img src="https://a107studio.github.io/academic-corner/formula/rotate.svg"></p>
 
 				<a href="" class="btn btn-primary">Read more</a>
 
