--- a/branchsub/chinese.html
+++ b/branchsub/chinese.html
@@ -82,7 +82,7 @@
 <div class="jumbotron-wrap">
 	<div class="container">
 		<div class="jumbotron">
-			<h1 class="text-center">这是107学术交流角——数学专区</h1>
+			<h1 class="text-center">这是107学术交流角——语文专区</h1>
 			<p class="lead text-center">语文是壮丽的，也是振奋人心的。</br>
                 人间岁月堂堂去，劝君快上青云路。圣处一灯传，工夫萤雪边。</br>
                 麴生风味恶，辜负西窗约。沙岸片帆开，寄书无雁来。</br>——  辛弃疾《菩萨蛮·送曹君之庄所》
@@ -112,7 +112,7 @@
 			<article>
 
 				<h2 class="article-title">孟子：王者师与大丈夫</h2>
-				<p class="article-meta">Posted by 107Math</a></p>
+				<p class="article-meta">Posted by 107Chinese</a></p>
 
 				<p>他们那种种腐朽与堕落的生活，即使我得了志，也不愿意做，那我为什么还怕他们呢？真正是“壁立千仞，无欲则刚”。这种正大光明，这种浩然正气，使得一切蝇营狗苟者都黯然失色。只有在这种伟大的“民”面前，君才会“轻”。孟子大倡“民贵君轻”，不亦宜乎!
                     </br>我很惊讶这样的话出现在孟子的作品中。我想，这是孟子政治思想的光辉顶点。伟大的人民能管理好自己，他们不需要圣贤与帝王的安排!“从来也没有救世主，也不靠神仙皇帝。要创造人类的幸福，全靠我们自己!”……</p>
@@ -123,8 +123,8 @@
 
 			<article>
 
-				<h2 class="article-title">西姆松定理(Simson Theorem)</h2>
-				<p class="article-meta">Posted by 107Math</a></p>
+				<h2 class="article-title">大戏台子四方方</h2>
+				<p class="article-meta">Posted by 107Chinese</a></p>
 
 				<p>镇上的“鼓吹台”（我们这里土话叫“戏楼”，跟北京城长春宫的戏园子可没得比）就在我家老屋后头，只隔方鱼塘，是花砖墁地、大青石砌的一个方方正正的大台子。赶上逛庙会，家家户户凑个份子，去外地请个吹唱班子或戏团，就上这儿来敲敲打打热闹十天半个月，大家伙儿不就图个乐儿吗？也让那些整日里满衣裳粥嘎巴
                     儿的小儿听个响儿。……</p>
