--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <!-- Main CSS --> 
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="branchsub/css/style.css">
 
 <!-- Font Awesome -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -249,9 +249,9 @@
 </footer>
 <!--Bootcamp JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="branchsub/js/jquery-3.2.1.slim.min.js"></script>
+<script src="branchsub/js/popper.min.js"></script>
+<script src="branchsub/js/bootstrap.min.js"></script>
 
 </body>
 </html>
