--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
 </footer>
 <!--Bootcamp JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="branchsub/js/jquery-3.2.1.slim.min.js"></script>
-<script src="branchsub/js/popper.min.js"></script>
-<script src="branchsub/js/bootstrap.min.js"></script>
+<script src="branchsub/css/jquery-3.2.1.slim.min.js"></script>
+<script src="branchsub/css/popper.min.js"></script>
+<script src="branchsub/css/bootstrap.min.js"></script>
 
 </body>
 </html>
