--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 	</div>
 </nav>
 </br>
-<div style="margin:0 auto";>
-	<p style="text-align: center;"><img src="formula/juwangyi.png"></p>
-</br>
+
+<h1 style="text-align: center; color: red;">俱往矣，数风流人物，还看今朝！</h1><br>
 <h1 style="text-align: center; color: #007bff;">Hottest Articles</h1>
 </div>
 </br>
