--- a/branchsub/math.html
+++ b/branchsub/math.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <title>107-Math</title>
-
+<link rel="shortcut icon" href="https://a107studio.github.io/img/logo.ico">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,8 +58,8 @@
 				<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">数学专区</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
-								  <a class="dropdown-item" href="">语文专区</a>
-								  <a class="dropdown-item" href="">音乐专区</a>
+								  <a class="dropdown-item" href="chinese.html">语文专区</a>
+								  <a class="dropdown-item" href="music.html">音乐专区</a>
 								  <a class="dropdown-item active" href="">One column / no sidebar</a>
 								  <a class="dropdown-item"  href="">Text / left sidebar</a>
 							</div>
@@ -97,7 +97,7 @@
 		<!-- Main content -->
 		<div class="col">
 			<article>
-				<h2 class="article-title">蒲丰实验（Buffon's Needle Problem）</h2>
+				<h2 class="article-title">蒲丰实验(Buffon's Needle Problem)</h2>
 
 				<p class="article-meta">Posted by 107Math</a></p>
 
@@ -132,7 +132,7 @@
 
 			<article>
 
-				<h2 class="article-title">蒙日定理（Monge's Circle Theorem）</h2>
+				<h2 class="article-title">蒙日定理(Monge's Circle Theorem)</h2>
 				<p class="article-meta">Posted by 107Math</a></p>
 
 				<p>定理内容：平面上任意三个圆，若这三个圆圆心不共线，则三条根轴相交于一点，这个点叫它们的根心；若三圆圆心共线，则三条根轴互相平行。</p>
@@ -143,14 +143,39 @@
 
 			<article>
 
-				<h2 class="article-title">旋转矩阵（Rotation Matrix）</h2>
+				<h2 class="article-title">旋转矩阵(Rotation Matrix)</h2>
 				<p class="article-meta">Posted by 107Math</a></p>
 
 				<p>旋转矩阵是在乘以一个向量的时候有改变向量的方向但不改变大小的效果的矩阵。旋转矩阵不包括反演，它可以把右手坐标系改变成左手坐标系或反之。所有旋转加上反演形成了正交矩阵的集合。旋转可分为主动旋转与被动旋转。主动旋转是指将向量逆时针围绕旋转轴所做出的旋转。被动旋转是对坐标轴本身进行的逆时针旋转，它相当于主动旋转的逆操作。</p>
 				<p>在二维空间中，旋转可以用一个单一的角θ定义。作为约定，正角表示逆时针旋转。把笛卡尔坐标的列向量关于原点逆时针旋转 θ 的矩阵是:</p>
 				<p><img src="https://a107studio.github.io/academic-corner/formula/rotate.svg"></p>
 
-				<a href="" class="btn btn-primary">Read more</a>
+				<a href="https://baike.baidu.com/item/%E6%97%8B%E8%BD%AC%E7%9F%A9%E9%98%B5" class="btn btn-primary">Read more</a>
+
+			</article>
+            <article>
+
+				<h2 class="article-title">勒让德定理(Legendre's Formula)</h2>
+				<p class="article-meta">Posted by 107Math</a></p>
+
+				<p>在正数n!的素因子标准分解式中，素数p的最高指数记作<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">，则<img src="https://bkimg.cdn.bcebos.com/formula/264a74a21537457cd97644b51b24103a.svg"></p>
+                <p>证明：若把2,3,...,n都分解成了标准分解式，则<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">就是这n-1个分解式中p的指数和.设其中p的指数为r的有<img src="https://www.zhihu.com/equation?tex=n_r">个(r≥1)，则
+                   <p><img src="a107studio.github.io/academic-corner/formula/legendre1.svg">
+                    <img src="a107studio.github.io/academic-corner/formula/legendre2.svg">
+                    <img src="a107studio.github.io/academic-corner/formula/legendre3.svg">,其中，
+                    <img src="a107studio.github.io/academic-corner/formula/legendre4.svg">恰好是2,3,...,n这n-1个数中能被<img src="https://www.zhihu.com/equation?tex=p%5E%7Br%7D">除尽的数的个数，即
+                    <img src="a107studio.github.io/academic-corner/formula/legendre5.svg">. Q.E.D.</p>
+				<a href="https://baike.baidu.com/item/%E5%8B%92%E8%AE%A9%E5%BE%B7%E5%AE%9A%E7%90%86/4826654" class="btn btn-primary">Read more</a>
+
+			</article>
+            <article>
+
+				<h2 class="article-title">棣莫弗定理(De Moivre's formula)</h2>
+				<p class="article-meta">Posted by 107Math</a></p>
+
+				<p>棣莫弗定理指的是设两个复数（用三角函数形式表示）<img src="https://bkimg.cdn.bcebos.com/formula/0da1ed23a475cd90ead06f4c3c15c618.svg">，则：<img src="https://bkimg.cdn.bcebos.com/formula/8241d8c9cbdc9b34622b301cb7495d48.svg">.</p>
+
+				<a href="https://baike.baidu.com/item/%E6%A3%A3%E8%8E%AB%E5%BC%97%E5%AE%9A%E7%90%86/10847817" class="btn btn-primary">Read more</a>
 
 			</article>
 			<!-- Example pagination Bootstrap component -->
@@ -185,9 +210,9 @@
 			<div class="row">
 				<div class="col-sm">
 					<ul>
-						<li><h4>Proin accumsan</h4></li>
-						<li><a href="#">Rutrum nulla a ultrices</a></li>
-						<li><a href="#">Blandit elementum</a></li>
+						<li><h4>相关链接</h4></li>
+						<li><a href="https://codepen.io/dffzmxj/full/LYybrRP">使用拉格朗日插值法计算114514</a></li>
+						<li><a href="https://www.zhihu.com/column/c_1286356584176943104">高中数学的奇技淫巧</a></li>
 						<li><a href="#">Proin placerat accumsan</a></li>
 						<li><a href="#">Morbi hendrerit libero </a></li>
 						<li><a href="#">Curabitur sit amet tellus</a></li>
@@ -241,9 +266,9 @@
 
 <!-- Bootcamp JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="js/jquery-3.2.1.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="css/jquery-3.2.1.slim.min.js"></script>
+<script src="css/popper.min.js"></script>
+<script src="css/bootstrap.min.js"></script>
 
 </body>
 </html>
