--- a/branchsub/math.html
+++ b/branchsub/math.html
@@ -160,11 +160,11 @@
 
 				<p>在正数n!的素因子标准分解式中，素数p的最高指数记作<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">，则<img src="https://bkimg.cdn.bcebos.com/formula/264a74a21537457cd97644b51b24103a.svg"></p>
                 <p>证明：若把2,3,...,n都分解成了标准分解式，则<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">就是这n-1个分解式中p的指数和.设其中p的指数为r的有<img src="https://www.zhihu.com/equation?tex=n_r">个(r≥1)，则
-                   <p><img src="a107studio.github.io/academic-corner/formula/legendre1.svg">
-                    <img src="a107studio.github.io/academic-corner/formula/legendre2.svg">
-                    <img src="a107studio.github.io/academic-corner/formula/legendre3.svg">,其中，
-                    <img src="a107studio.github.io/academic-corner/formula/legendre4.svg">恰好是2,3,...,n这n-1个数中能被<img src="https://www.zhihu.com/equation?tex=p%5E%7Br%7D">除尽的数的个数，即
-                    <img src="a107studio.github.io/academic-corner/formula/legendre5.svg">. Q.E.D.</p>
+                   <p><img src="https://a107studio.github.io/academic-corner/formula/Legendre1.svg">
+                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre2.svg">
+                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre3.svg">,其中，
+                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre4.svg">恰好是2,3,...,n这n-1个数中能被<img src="https://www.zhihu.com/equation?tex=p%5E%7Br%7D">除尽的数的个数，即
+                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre5.svg">. Q.E.D.</p>
 				<a href="https://baike.baidu.com/item/%E5%8B%92%E8%AE%A9%E5%BE%B7%E5%AE%9A%E7%90%86/4826654" class="btn btn-primary">Read more</a>
 
 			</article>
