--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </nav>
 </br>
 
-<h1 style="text-align: center; color: red;"><script src="https://a107studio.github.io/api.php"></script></h1><br>
+<script src="https://a107studio.github.io/api.php"></script><br>
 <h1 style="text-align: center; color: #007bff;">Hottest Articles</h1>
 </div>
 </br>
