--- a/branchsub/math.html
+++ b/branchsub/math.html
@@ -50,19 +50,19 @@
 						<a class="nav-link" href="https://a107studio.github.io/homepage.html"> 回主站 <span class="sr-only">(current)</span></a>
 				</li>
 
-
 				<li class="nav-item">
 					<a class="nav-link" href="https://a107studio.github.io/academic-corner/index.html">回到交流角</a>
-			</li>
+				</li>
 
 				<li class="nav-item dropdown active">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">数学专区</a>
-							<div class="dropdown-menu navbar-dark bg-primary">
-								  <a class="dropdown-item" href="chinese.html">语文专区</a>
-								  <a class="dropdown-item" href="music.html">音乐专区</a>
-								  <a class="dropdown-item active" href="">One column / no sidebar</a>
-								  <a class="dropdown-item"  href="">Text / left sidebar</a>
-							</div>
+					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">数学专区</a>
+					<div class="dropdown-menu navbar-dark bg-primary">
+						<a class="dropdown-item" href="chinese.html">语文专区</a>
+						<a class="dropdown-item" href="music.html">音乐专区</a>
+						<a class="dropdown-item" href="progress.html">进步专区</a>
+						<a class="dropdown-item active" href="">One column / no sidebar</a>
+						<a class="dropdown-item"  href="">Text / left sidebar</a>
+					</div>
 				</li>
 
 				<li class="nav-item">
@@ -153,27 +153,13 @@
 				<a href="https://baike.baidu.com/item/%E6%97%8B%E8%BD%AC%E7%9F%A9%E9%98%B5" class="btn btn-primary">Read more</a>
 
 			</article>
-            <article>
-
-				<h2 class="article-title">勒让德定理(Legendre's Formula)</h2>
-				<p class="article-meta">Posted by 107Math</a></p>
-
-				<p>在正数n!的素因子标准分解式中，素数p的最高指数记作<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">，则<img src="https://bkimg.cdn.bcebos.com/formula/264a74a21537457cd97644b51b24103a.svg"></p>
-                <p>证明：若把2,3,...,n都分解成了标准分解式，则<img src="https://bkimg.cdn.bcebos.com/formula/9313a724c09ab478c5a50ff6dab32242.svg">就是这n-1个分解式中p的指数和.设其中p的指数为r的有<img src="https://www.zhihu.com/equation?tex=n_r">个(r≥1)，则
-                   <p><img src="https://a107studio.github.io/academic-corner/formula/Legendre1.svg">
-                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre2.svg">
-                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre3.svg">,其中，
-                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre4.svg">恰好是2,3,...,n这n-1个数中能被<img src="https://www.zhihu.com/equation?tex=p%5E%7Br%7D">除尽的数的个数，即
-                    <img src="https://a107studio.github.io/academic-corner/formula/Legendre5.svg">. Q.E.D.</p>
-				<a href="https://baike.baidu.com/item/%E5%8B%92%E8%AE%A9%E5%BE%B7%E5%AE%9A%E7%90%86/4826654" class="btn btn-primary">Read more</a>
-
-			</article>
+            
             <article>
 
 				<h2 class="article-title">棣莫弗定理(De Moivre's formula)</h2>
 				<p class="article-meta">Posted by 107Math</a></p>
 
-				<p>棣莫弗定理指的是设两个复数（用三角函数形式表示）<img src="https://bkimg.cdn.bcebos.com/formula/0da1ed23a475cd90ead06f4c3c15c618.svg">，则：<img src="https://bkimg.cdn.bcebos.com/formula/8241d8c9cbdc9b34622b301cb7495d48.svg">.</p>
+				<p>棣莫弗定理指的是设两个复数（用三角函数形式表示）<img src="https://a107studio.github.io/academic-corner/formula/fushu1.svg">，则：<img src="https://a107studio.github.io/academic-corner/formula/fushu2.svg">.</p>
 
 				<a href="https://baike.baidu.com/item/%E6%A3%A3%E8%8E%AB%E5%BC%97%E5%AE%9A%E7%90%86/10847817" class="btn btn-primary">Read more</a>
 
@@ -242,12 +228,7 @@
 					<h4>Suspendisse</h4>
 					<p>Integer mattis blandit turpis, quis rutrum est. Maecenas quis arcu vel felis lobortis iaculis fringilla at ligula. Nunc dignissim porttitor dolor eget porta.</p>
 
-					<p class="social-icons">
-						<a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-						<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-						<a href="#"><i class="fa fa-youtube fa-2x"></i></a>
-						<a href="#"><i class="fa fa-instagram fa-2x"></i></a>
-					</p>
+					
 				</div>
 			</div>
 		</div>
@@ -255,13 +236,9 @@
 	
 	
 	<div class="footer-bottom">
-			<p class="text-center">Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-</p>
-			<p class="text-center"><a href="#">Back to top</a></p>
+			<p class="text-center">107工作室出品。A Production Of 107Studio.</p>
 	</div>
-	
 </footer>
-
 
 
 <!-- Bootcamp JavaScript -->
