--- a/branchsub/kichiku.html
+++ b/branchsub/kichiku.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="zh-CN">
-	<link rel="shortcut icon" href="https://a107studio.github.io/img/logo.ico">
+<link rel="shortcut icon" href="https://a107studio.github.io/img/logo.ico">
 <head>
-<title>107-Music</title>
+<title>107-Kichiku</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 			
 			<!-- Left header box -->
 			<header class="col-6 text-left">
-				<h1>107Music</h1>
+				<h1>107Kichiku</h1>
 			</header>
 			</div>
 		</div>
@@ -62,7 +62,7 @@
 								  <a class="dropdown-item" href="math.html">数学专区</a>
 								  <a class="dropdown-item" href="chinese.html">语文专区</a>
 								  <a class="dropdown-item" href="progress.html">进步专区</a>
-								  <a class="dropdown-item" href="kichiku.html">鬼畜专区</a>
+								  <a class="dropdown-item" href="music.html">音乐专区</a>
 								  <a class="dropdown-item active" href="">One column / no sidebar</a>
 								  <a class="dropdown-item"  href="">Text / left sidebar</a>
 							</div>
@@ -85,8 +85,8 @@
 <div class="jumbotron-wrap">
 	<div class="container">
 		<div class="jumbotron">
-			<h1 class="text-center">这是107学术交流角——音乐专区</h1>
-			<p class="lead text-center">音乐是净化心灵的，也是涤荡人心的。</br>
+			<h1 class="text-center">这是107学术交流角——鬼畜专区</h1>
+			<p class="lead text-center">“鬼畜”在中国指的是一种视频站上较为常见的原创视频类型，该类视频以高度同步、快速重复的素材配合BGM的节奏鬼一样的抽搐来达到洗脑或喜感效果，或通过视频（或音频）剪辑，用频率极高的重复画面（或声音）组合而成的一段节奏配合音画同步率极高的一类视频。</br>
               
 			</p>
 		</div>
@@ -101,68 +101,40 @@
 		<div class="col">
 			<article>
 
-				<h2 class="article-title">Zood</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
+				<h2 class="article-title">错位时空</h2>
+				<p class="article-meta">Posted by 107Kichiku</a></p>
 
-				<p>《Mood(Li Ghost Remix)》是24KGoldn、Iann Dior与Lil Ghost小鬼的说唱作品。《Zood》是<a href="https://space.bilibili.com/2420442" rel="author">找找</a>的翻唱版本。</p>
-				<p>义！乌！哥儿们在这给你说唱！  L！T！C！嗯！理塘丁真！  哥儿们名叫丁真  Smoking round, e-cigarettes new  我的小马名字叫珍珠  假烟发现就跑路  Baby I ain't smoking by your rules  臭要饭的别挡我财路……</p>
-				<a href="https://www.bilibili.com/video/BV1xh411q76p" class="btn btn-primary">跟随学习</a>
-				<a href="https://a107studio.github.io/file/15.html" class="btn btn-warning">查看歌词</a>
+				<p>《错位时空》是周仁作词，张博文作曲，艾辰演唱的歌曲，由网易云音乐飓风工作室出品，于2021年1月1日发行。</p>
+				<a href="https://music.163.com/#/song?id=1808492017" class="btn btn-primary">跟随原版学习</a>
+				<a href="https://kg.qq.com/node/play?s=173CaC1Ocn3e31qZ" class="btn btn-success">跟随改版学习</a>
+				<a href="https://a107studio.github.io/academic-corner/formula/cwsk.png" class="btn btn-warning">查看歌词</a>
+
+			</article>
+
+			<article>
+
+				<h2 class="article-title">夜空中最亮的星</h2>
+				<p class="article-meta">Posted by 107Kichiku</a></p>
+
+				<p>《夜空中最亮的星》是逃跑计划演唱的一首歌，由逃跑计划填词谱曲，收录于逃跑计划2011年发行的首张专辑《世界》中，同时还是微电影《摘星的你》主题曲，电影《流浪地球》片尾曲。</p>
+				<p>夜空中最亮的星 能否听清 那仰望的人 心底的孤独和叹息</p>
+				<a href="https://music.163.com/#/song?id=25706282" class="btn btn-primary">跟随原版学习</a>
+				<a href="https://kg.qq.com/node/play?s=dRFlwldMlB1fBd-1" class="btn btn-success">跟随改版学习(To Alice)</a>
+				<a href="https://baike.baidu.com/item/%E5%A4%9C%E7%A9%BA%E4%B8%AD%E6%9C%80%E4%BA%AE%E7%9A%84%E6%98%9F/4118870" class="btn btn-warning">查看歌词</a>
 
 			</article>
 			<article>
 
-				<h2 class="article-title">圣诞快乐，劳伦斯先生</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
+				<h2 class="article-title">只因你太美</h2>
+				<p class="article-meta">Posted by 107Kichiku</a></p>
 
-				<p>《Merry Christmas Mr. Lawrence》是电影《圣诞快乐，劳伦斯先生》的原声带专辑，也是坂本龙一的一张录音室专辑，共收录19首歌曲，由坂本龙一、小野胜根和田中信一担任制作人，于1983年5月1日在日本通过伦敦唱片发行，1983年8月在英国通过维珍唱片及宝丽金唱片发行。</p>
-				<a href="https://music.163.com/#/song?id=27010230" class="btn btn-primary">品鉴原版</a>
-
-
-			</article>
-			<article>
-
-				<h2 class="article-title">冬之花</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
-
-				<p>《冬之花》（日语：冬の花）是日剧《后妻业》的主题曲，由宫本浩次演唱，由环球音乐有限公司于2019年2月12日发布。</p>
-				<p>いずれ花と散る わたしの生命 帰らぬ時 指おり数えても 涙と笑い 過去と未来 引き裂かれしわたしは 冬の花 </p>
-				<a href="https://www.bilibili.com/video/BV1sB4y147MZ" class="btn btn-primary">跟随学习</a>
-				<a href="https://www.bilibili.com/read/cv17296956" class="btn btn-warning">查看歌词</a>
+				<p>SWIN-S继《New World》、《For You》之后，SWIN-S的第三波单曲《只因你太美》也已上线，成员们将通过这首动感十足的歌曲，向粉丝们带来新一轮的“强势告白”。</p>
+                <p>只因你太美 baby 只因你太美 baby 只因你实在是太美 baby 只因你太美 baby 迎面走来的你让我如此蠢蠢欲动……</p>
+				<a href="https://y.qq.com/n/ryqq/songDetail/0020Nusb3QJGn9" class="btn btn-primary">跟随原版学习</a>
+				<a href="https://baike.baidu.com/item/%E5%8F%AA%E5%9B%A0%E4%BD%A0%E5%A4%AA%E7%BE%8E/20247733" class="btn btn-warning">查看歌词</a>
 
 			</article>
-			<article>
 
-				<h2 class="article-title">Shaolin Dreams</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
-
-				<p>《Shaolin Dreams》是由Michael Bibi创作的歌曲。曲风：Techno.</p>
-				<p>该曲将中国传统少林文化与英伦科技风音乐有机结合起来，实现中英合创两开花的大雅局面。</p>
-				<a href="https://music.163.com/#/song?id=1862606376" class="btn btn-primary">品鉴原版</a>
-
-			</article>
-			<article>
-
-				<h2 class="article-title">送你一瓣的雪花</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
-
-				<p>《送你一瓣的雪花》是由黎明演唱的歌曲，所属专辑《火舞艳阳》，环球唱片于1994年发行。</p>
-				<p>站在雪靴的足迹里 雪花的飞絮 如流泪 莫怪谁 这影子不要追 愿在我衣衫中的一角里 妄想思绪 来寻觅你</p>
-				<p>注：该歌曲ID为114514.</p>
-				<a href="https://music.163.com/#/song?id=114514" class="btn btn-primary">跟随学习</a>
-				<a href="https://baike.baidu.com/item/%E9%80%81%E4%BD%A0%E4%B8%80%E7%93%A3%E7%9A%84%E9%9B%AA%E8%8A%B1/638488?fr=aladdin" class="btn btn-warning">查看歌词</a>
-
-			</article>
-			<article>
-
-				<h2 class="article-title">Sandstorm</h2>
-				<p class="article-meta">Posted by 107Music</a></p>
-
-				<p>《Sandstorm》是由Darude制作的歌曲。曲风：Trance.</p>
-				<p>该曲为金属先辈本篇开头。此外，本歌曲代表了20世纪末的先锋音乐。该歌曲在英美引起不小的骚动，气势如虹地登上了UK金榜第3名，更一举拿下德国Echo舞曲大赏的年度舞曲大赏，自此一举成名。该歌曲曾在庆祝芬兰独立100周年大会上播放。</p>
-				<a href="https://music.163.com/#/song?id=17259895" class="btn btn-primary">品鉴原版</a>
-
-			</article>
 			<!-- Example pagination Bootstrap component -->
 			<nav>
 				<ul class="pagination">
