--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 				<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">交流角</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
-								<a class="dropdown-item"  href="branchsub/math.html">语文专区</a>
+								<a class="dropdown-item" href="branchsub/chinese.html">语文专区</a>
 								<a class="dropdown-item" href="branchsub/math.html">数学专区</a>
-								<a class="dropdown-item" href="branchsub/chinese.html">音乐专区</a>
+								<a class="dropdown-item" href="branchsub/music.html">音乐专区</a>
+								<a class="dropdown-item" href="branchsub/kichiku.html">鬼畜专区</a>
 								<a class="dropdown-item active" href="branchsub/progress.html">进步专区</a>
 							</div>
 				</li>
@@ -87,6 +88,7 @@
 						<a class="list-group-item active" href="branchsub/math.html">数学专区</a>
 						<a class="list-group-item" href="branchsub/chinese.html">语文专区</a>
 						<a class="list-group-item" href="branchsub/music.html">音乐专区</a>
+						<a class="list-group-item" href="branchsub/kichiku.html">鬼畜专区</a>
 						<a class="list-group-item" href="branchsub/progress.html">进步专区</a>	
 					</div>
 					<a class="list-group-item" href="three-column.html">Three column layout example</a>
@@ -162,7 +164,17 @@
 				<a href="branchsub/progress.html" class="btn btn-secondary">跳转至进步专区</a>
 			</article>
 
+			<article>
 
+				<h2 class="article-title">只因你太美</h2>
+				<p class="article-meta">Posted by 107Kichiku</a></p>
+
+				<p>SWIN-S继《New World》、《For You》之后，SWIN-S的第三波单曲《只因你太美》也已上线，成员们将通过这首动感十足的歌曲，向粉丝们带来新一轮的“强势告白”。</p>
+                <p>只因你太美 baby 只因你太美 baby 只因你实在是太美 baby 只因你太美 baby 迎面走来的你让我如此蠢蠢欲动……</p>
+				<a href="https://y.qq.com/n/ryqq/songDetail/0020Nusb3QJGn9" class="btn btn-primary">跟随原版学习</a>
+				<a href="https://baike.baidu.com/item/%E5%8F%AA%E5%9B%A0%E4%BD%A0%E5%A4%AA%E7%BE%8E/20247733" class="btn btn-warning">查看歌词</a>
+				<a href="branchsub/kichiku.html" class="btn btn-secondary">跳转至鬼畜专区</a>
+			</article>
 			<!-- Example pagination Bootstrap component -->
 			<nav>
 				<ul class="pagination">
