--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <!-- Main CSS --> 
-<link rel="stylesheet" href="branchsub/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <!-- Font Awesome -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -48,11 +48,11 @@
 				<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">交流角</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
-								<a class="dropdown-item" href="branchsub/chinese.html">语文专区</a>
-								<a class="dropdown-item" href="branchsub/math.html">数学专区</a>
-								<a class="dropdown-item" href="branchsub/music.html">音乐专区</a>
-								<a class="dropdown-item" href="branchsub/kichiku.html">鬼畜专区</a>
-								<a class="dropdown-item active" href="branchsub/progress.html">进步专区</a>
+								<a class="dropdown-item" href="chinese.html">语文专区</a>
+								<a class="dropdown-item" href="math.html">数学专区</a>
+								<a class="dropdown-item" href="music.html">音乐专区</a>
+								<a class="dropdown-item" href="kichiku.html">鬼畜专区</a>
+								<a class="dropdown-item active" href="english.html">英语专区</a>
 							</div>
 				</li>
 
@@ -69,7 +69,6 @@
 </nav>
 </br>
 
-<script src="https://a107studio.github.io/api.php"></script><br>
 <h1 style="text-align: center; color: #007bff;">Hottest Articles</h1>
 </div>
 </br>
@@ -85,20 +84,20 @@
 					<a class="list-group-item" href="https://a107studio.github.io/homepage.html">回主站</a>
 					<a class="list-group-item" href="index.html">回到顶部</a>
 					<div class="list-group">
-						<a class="list-group-item active" href="branchsub/math.html">数学专区</a>
-						<a class="list-group-item" href="branchsub/chinese.html">语文专区</a>
-						<a class="list-group-item" href="branchsub/music.html">音乐专区</a>
-						<a class="list-group-item" href="branchsub/kichiku.html">鬼畜专区</a>
-						<a class="list-group-item" href="branchsub/progress.html">进步专区</a>	
+						<a class="list-group-item active" href="math.html">数学专区</a>
+						<a class="list-group-item" href="chinese.html">语文专区</a>
+						<a class="list-group-item" href="music.html">音乐专区</a>
+						<a class="list-group-item" href="kichiku.html">鬼畜专区</a>
+						<a class="list-group-item" href="progress.html">进步专区</a>	
 					</div>
-					<a class="list-group-item" href="three-column.html">Three column layout example</a>
+					<!-- <a class="list-group-item" href="three-column.html">Three column layout example</a>
 					<a class="list-group-item" href="#">Sed aliquam libero ut velit bibendum</a>
-					<a class="list-group-item" href="#">Maecenas condimentum velit vitae</a>
+					<a class="list-group-item" href="#">Maecenas condimentum velit vitae</a> -->
 				</div>
 			</div>
 
 			<div class="sidebar-box sidebar-box-bg">
-				<h4>About us</h4>
+				<h4>About Us</h4>
 				<p>本学术交流角致力于提供一个可以补充学习的空间。本学习角涵盖了语文、数学、英语、物理学、化学、生物学、音乐、人文、心理学等多学科的内容，可供您增长见闻、提升自我。 <a href="#" class="readmore">Let's Go</a></p>    
 			</div>
 
@@ -129,7 +128,7 @@
 
 				
 				<a href="http://www.leleketang.com/zuowen/369453.shtml" class="btn btn-primary">Read more</a>
-				<a href="branchsub/chinese.html" class="btn btn-secondary">跳转至语文专区</a>
+				<a href="chinese.html" class="btn btn-secondary">跳转至语文专区</a>
 
 			</article>
 			<article>
@@ -139,7 +138,7 @@
 
 				<p>立体几何公式。设拟柱体的高（两底面α，β间的距离）为H，如果用平行于底面的平面γ去截该图形，所得到的截面面积是平面γ与平面α之间距离h的不超过3次的函数，那么该拟柱体的体积为<img src="https://www.zhihu.com/equation?tex=V%3d%5cfrac%7B1%7D%7B6%7D%5Ccdot%28S_1%2B4S_0%2BS_2%29%5Ccdot%5c+h">。</p>
 				<a href="https://baike.baidu.com/item/%E8%BE%9B%E6%99%AE%E6%A3%AE%E5%85%AC%E5%BC%8F/9255085?fr=aladdin" class="btn btn-primary">Read more</a>
-				<a href="branchsub/math.html" class="btn btn-secondary">跳转至数学专区</a>
+				<a href="math.html" class="btn btn-secondary">跳转至数学专区</a>
 
 			</article>
 			<article>
@@ -151,7 +150,7 @@
 				<p>义！乌！哥儿们在这给你说唱！  L！T！C！嗯！理塘丁真！  哥儿们名叫丁真  Smoking round, e-cigarettes new  我的小马名字叫珍珠  假烟发现就跑路  Baby I ain't smoking by your rules  臭要饭的别挡我财路……</p>
 				<a href="https://www.bilibili.com/video/BV1xh411q76p" class="btn btn-primary">跟随学习</a>
 				<a href="https://a107studio.github.io/file/15.html" class="btn btn-warning">查看歌词</a>
-				<a href="branchsub/music.html" class="btn btn-secondary">跳转至音乐专区</a>
+				<a href="music.html" class="btn btn-secondary">跳转至音乐专区</a>
 
 			</article>
 			<article>
@@ -161,7 +160,7 @@
 
 				<p>十四岁到二十五岁的青年们，要学习，要工作，但青年时期是长身体的时期，如果对青年长身体不重视，那很危险。青年比成年人更需要学习，要学会成年人已经学会了的许多东西。但是，他们的学习和工作的负担都不能过重。尤其是十四岁到十八岁的青年，劳动强度不能同成年人一样。青年人就是要多玩一点，要多娱乐一点，要跳跳蹦蹦，不然他们就不高兴。以后还要恋爱、结婚。这些都和成年人不同。我给青年们讲几句话:一、祝贺他们身体好；二、祝贺他们学习好；三、祝贺他们工作好。我提议，学生的睡眠时间再增加一小时。现在是八小时，实际上只有六七小时，普遍感到睡不够。因为知识青年容易神经衰弱，他们往往睡不着，醒不来。一定要规定九小时睡眠时间。要下一道命令，不要讨论，强迫执行。青年们要睡好，教师也要睡足。</a></p>
 				<a href="https://www.cctv.com/special/756/1/50012.html" class="btn btn-primary">Read more</a>
-				<a href="branchsub/progress.html" class="btn btn-secondary">跳转至进步专区</a>
+				<a href="progress.html" class="btn btn-secondary">跳转至进步专区</a>
 			</article>
 
 			<article>
@@ -173,7 +172,7 @@
                 <p>只因你太美 baby 只因你太美 baby 只因你实在是太美 baby 只因你太美 baby 迎面走来的你让我如此蠢蠢欲动……</p>
 				<a href="https://y.qq.com/n/ryqq/songDetail/0020Nusb3QJGn9" class="btn btn-primary">跟随原版学习</a>
 				<a href="https://baike.baidu.com/item/%E5%8F%AA%E5%9B%A0%E4%BD%A0%E5%A4%AA%E7%BE%8E/20247733" class="btn btn-warning">查看歌词</a>
-				<a href="branchsub/kichiku.html" class="btn btn-secondary">跳转至鬼畜专区</a>
+				<a href="kichiku.html" class="btn btn-secondary">跳转至鬼畜专区</a>
 			</article>
 			<!-- Example pagination Bootstrap component -->
 			<nav>
@@ -260,9 +259,9 @@
 </footer>
 <!--Bootcamp JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="branchsub/css/jquery-3.2.1.slim.min.js"></script>
-<script src="branchsub/css/popper.min.js"></script>
-<script src="branchsub/css/bootstrap.min.js"></script>
+<script src="css/jquery-3.2.1.slim.min.js"></script>
+<script src="css/popper.min.js"></script>
+<script src="css/bootstrap.min.js"></script>
 
 </body>
 </html>
